--- a/updated_fogones_cleaning.ipynb
+++ b/updated_fogones_cleaning.ipynb
@@ -19,11 +19,11 @@
     "import numpy as np\n",
     "import re \n",
     "from itertools import product\n",
-    "import googletrans\n",
-    "import pydeepl\n",
-    "from deep_translator import PonsTranslator\n",
-    "from deep_translator import GoogleTranslator\n",
-    "from deep_translator import LingueeTranslator\n",
+    "#import googletrans\n",
+    "#import pydeepl\n",
+    "#from deep_translator import PonsTranslator\n",
+    "#from deep_translator import GoogleTranslator\n",
+    "#from deep_translator import LingueeTranslator\n",
     "import scipy.stats"
    ]
   },
@@ -7644,7 +7644,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "5ac0a80b",
+   "id": "892d38af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7657,7 +7657,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "41268a42",
+   "id": "fac11343",
    "metadata": {},
    "outputs": [
     {
@@ -8511,7 +8511,7 @@
   {
    "cell_type": "code",
    "execution_count": 304,
-   "id": "f031935e",
+   "id": "0448a93d",
    "metadata": {
     "scrolled": true
    },
@@ -8889,7 +8889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb4d5f33",
+   "id": "774779a9",
    "metadata": {},
    "source": [
     "# Checking proteins based on 5000 random menus"
@@ -8898,7 +8898,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "79c9dc2d",
+   "id": "ac36e430",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8908,7 +8908,7 @@
   {
    "cell_type": "code",
    "execution_count": 315,
-   "id": "6d6c7cd7",
+   "id": "266bc925",
    "metadata": {},
    "outputs": [
     {
@@ -8929,7 +8929,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "38c0063a",
+   "id": "65b482a2",
    "metadata": {},
    "outputs": [
     {
@@ -8950,7 +8950,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "5f246ebe",
+   "id": "2184c14c",
    "metadata": {},
    "outputs": [
     {
@@ -8978,7 +8978,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14a86629",
+   "id": "84af786a",
    "metadata": {},
    "source": [
     "# Building the recommender"
@@ -8987,7 +8987,7 @@
   {
    "cell_type": "code",
    "execution_count": 331,
-   "id": "be103756",
+   "id": "1dc21d5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9046,7 +9046,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77abad0c",
+   "id": "6857ca3c",
    "metadata": {
     "scrolled": true
    },
@@ -9057,15 +9057,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4526d3b4",
+   "id": "7523f7e7",
    "metadata": {},
    "source": [
-    "# Final Bootcam Project: Analysis of the \"Danza de Fogones\" website and vegan menu recommender."
+    "# Part of the presentation: Final Bootcam Project: Analysis of the \"Danza de Fogones\" website and vegan menu recommender."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1fd03fe4",
+   "id": "b3beb0fc",
    "metadata": {},
    "source": [
     "## Lets check the proteins, based on a 5000 random menus (more than 13 years!)"
@@ -9074,7 +9074,7 @@
   {
    "cell_type": "code",
    "execution_count": 335,
-   "id": "f37f2019",
+   "id": "0c91da15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9084,7 +9084,7 @@
   {
    "cell_type": "code",
    "execution_count": 336,
-   "id": "9c3b05ac",
+   "id": "360a3dd4",
    "metadata": {},
    "outputs": [
     {
@@ -9105,7 +9105,7 @@
   {
    "cell_type": "code",
    "execution_count": 337,
-   "id": "3df39890",
+   "id": "1ac6a1c9",
    "metadata": {},
    "outputs": [
     {
@@ -9126,7 +9126,7 @@
   {
    "cell_type": "code",
    "execution_count": 338,
-   "id": "44c832f7",
+   "id": "5e03f327",
    "metadata": {},
    "outputs": [
     {
@@ -9154,7 +9154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfc435c4",
+   "id": "ff68e94e",
    "metadata": {},
    "source": [
     "## Making completely random menus without worries!"
@@ -9163,7 +9163,7 @@
   {
    "cell_type": "code",
    "execution_count": 343,
-   "id": "34b0abcc",
+   "id": "dcf0a336",
    "metadata": {},
    "outputs": [
     {
@@ -9539,7 +9539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dc62e29",
+   "id": "89f616e9",
    "metadata": {},
    "source": [
     "## Making random menus based on your nutritional requirements!"
@@ -9548,7 +9548,7 @@
   {
    "cell_type": "code",
    "execution_count": 345,
-   "id": "a989b705",
+   "id": "51e499e7",
    "metadata": {},
    "outputs": [
     {
@@ -9758,9 +9758,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fd2d29fe",
+   "metadata": {},
+   "source": [
+    "Exporting a dataset for further data analysis:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 346,
+   "id": "7cb9a402",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random_5000_recipes = random_menu_maker(5000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 347,
+   "id": "7de7b6d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random_5000_recipes.to_csv(\"random_5000_recipes.csv\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f53ba7f6",
+   "id": "cd8b684a",
    "metadata": {},
    "outputs": [],
    "source": []
